--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
-FROM tomcat
+FROM tomcat:8.0-jre8
 Maintainer Harsha
-COPY tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
-COPY maven.war /usr/local/tomcat/webapps/maven.war
-EXPOSE 8080
+ADD tomcat-users.xml /usr/local/tomcat/conf/
+ADD maven.war /usr/local/tomcat/webapps/maven.war
+CMD ["shutdown.sh", "run"]
+CMD ["startup.sh","run"]
 CMD ["catalina.sh", "run"]
